kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/acme-challenge-type: http01
    metallb.universe.tf/address-pool: my-pool
spec:
  rules:
  - host: shop.35.228.85.107.nip.io
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 8080
        pathType: ImplementationSpecific
        path: /
